--- a/package.json
+++ b/package.json
@@ -1,13 +1,34 @@
 {
     "private": true,
-    "type": "module",
     "scripts": {
-        "dev": "vite",
-        "build": "vite build"
+        "dev": "npm run development",
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
+        "prod": "npm run production",
+        "production": "mix --production"
     },
     "devDependencies": {
+        "@popperjs/core": "^2.11.6",
+        "@tailwindcss/forms": "^0.5.3",
+        "@vitejs/plugin-vue": "^4.0.0",
+        "autoprefixer": "^10.4.13",
         "axios": "^1.1.2",
-        "laravel-vite-plugin": "^0.7.5",
-        "vite": "^4.0.0"
+        "bootstrap": "^5.2.3",
+        "lodash": "^4.17.19",
+        "postcss": "^8.4.21",
+        "sass": "^1.56.1",
+        "tailwindcss": "^3.3.2",
+        "vue": "^3.2.37",
+        "vue-loader": "^16.8.3"
+    },
+    "dependencies": {
+        "@vueuse/components": "^9.13.0",
+        "@vueuse/core": "^9.13.0",
+        "html2pdf": "^0.0.11",
+        "laravel-mix": "^6.0.49",
+        "npm": "^9.3.1",
+        "v-lazy-component": "^3.0.8"
     }
 }
